# aether-vpn

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
api/: Cargo.toml  main.rs  schema.rs
api/config/: mod.rs
api/controllers/: mod.rs  server_controller.rs  user_controller.rs  vpn_controller.rs
api/core/: mod.rs
api/middlewares/: mod.rs
api/models/: connection.rs  mod.rs  server.rs  user.rs  vpn_key.rs
api/queries/: mod.rs
api/routes/: mod.rs
api/services/: mod.rs  vpn_service.rs
api/tests/: mod.rs
api/utils/: jwt.rs  mod.rs
cli/: Cargo.toml  README.md
cli/src/: config.rs  error.rs  lib.rs  main.rs  wireguard.rs
cli/src/api/: client.rs  mod.rs  models.rs
cli/src/commands/: auth.rs  config.rs  mod.rs  servers.rs  user.rs  vpn.rs
docs/: README.md
