[package]
name = "aether-vpn-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aether-vpn-api"
path = "main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
bcrypt = "0.15"
rand = "0.8"
x25519-dalek = "2.0"
base64 = "0.21"