[package]
name = "avpn"
version = "0.1.0"
edition = "2021"
description = "Aether VPN CLI client"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "avpn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
jsonwebtoken = "8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
rpassword = "7.2"